Amélioration de la mise en page

--- a/res/fichesDescriptives.html
+++ b/res/fichesDescriptives.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <meta charset="UTF-8">
-        <title>&ast;Fiches Descriptives&ast;</title>
+        <title>&lt;u&gt;&ast;Fiches Descriptives&ast;&lt;&sol;u&gt;</title>
         <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -41,13 +41,13 @@
         <style>
 .task-list-item { list-style-type: none; } .task-list-item-checkbox { margin-left: -20px; vertical-align: middle; }
 </style>
-
-<link rel="stylesheet" href="style.css">
         
+<link rel="stylesheet" href="style.css">
+
     </head>
     <body class="vscode-body vscode-light">
-        <h1 id="fiches-descriptives"><em>Fiches Descriptives</em></h1>
-<h2 id="fiche-descriptive-01">~Fiche descriptive 01~</h2>
+        <h1 id="ufiches-descriptivesu"><u><em>Fiches Descriptives</em></u></h1>
+<h2 id="fiche-descriptive-01"><em>Fiche descriptive 01</em></h2>
 <table>
 <thead>
 <tr>
@@ -89,7 +89,7 @@
 
 </div></code></pre>
 <hr>
-<h2 id="fiche-descriptive-02">~Fiche descriptive 02~</h2>
+<h2 id="fiche-descriptive-02"><em>Fiche descriptive 02</em></h2>
 <table>
 <thead>
 <tr>
@@ -146,7 +146,7 @@
 
 </div></code></pre>
 <hr>
-<h2 id="fiche-descriptive-03">~Fiche descriptive 03~</h2>
+<h2 id="fiche-descriptive-03"><em>Fiche descriptive 03</em></h2>
 <table>
 <thead>
 <tr>
