ajout de l'interface IDataset

--- a/res/fichesDescriptives.html
+++ b/res/fichesDescriptives.html
@@ -41,7 +41,7 @@
         <style>
 .task-list-item { list-style-type: none; } .task-list-item-checkbox { margin-left: -20px; vertical-align: middle; }
 </style>
-        
+     
 <link rel="stylesheet" href="style.css">
 
     </head>
@@ -200,6 +200,92 @@
 <h3 id="scénario-alternatif-b-fiche-03--à-partir-de-3-lutilisateur-sélectionne-un-jeu-et-valide">Scénario Alternatif B Fiche 03 : À Partir de “3) L’utilisateur sélectionne un jeu et valide”</h3>
 <pre><code class="language-text"><div>
     1) Le jeu de données n’est pas valide, le système renvoie à l’étape 2) du Scénario Nominal
+
+</div></code></pre>
+<h2 id="fiche-descriptive-04"><em>Fiche descriptive 04</em></h2>
+<table>
+<thead>
+<tr>
+<th>Fiche descriptive 04</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Cas d’utilisation :</td>
+<td>Sauvegarder les données</td>
+</tr>
+<tr>
+<td>Acteur principal :</td>
+<td>Utilisateur</td>
+</tr>
+<tr>
+<td>Acteur secondaire :</td>
+<td>Aucun</td>
+</tr>
+<tr>
+<td>Préconditions :</td>
+<td>avoir des données</td>
+</tr>
+<tr>
+<td>Garantie en cas de succès :</td>
+<td>Les données sont sauvegardées dans fichier en csv</td>
+</tr>
+<tr>
+<td>Garantie minimale :</td>
+<td>Retour à l’état initial</td>
+</tr>
+</tbody>
+</table>
+<h3 id="scénario-nominal-fiche-04">Scénario Nominal Fiche 04</h3>
+<pre><code class="language-text"><div>
+    1) L’utilisateur lance la fonctionnalité “Sauvegarder les données
+    2) Le système propose de choisir un nom pour la sauvegarde
+    3) L’utilisateur valide la sauvegarde
+    4) Le jeu de données est sauvegardé dans un fichier csv 
+
+</div></code></pre>
+<h2 id="fiche-descriptive-05"><em>Fiche descriptive 05</em></h2>
+<table>
+<thead>
+<tr>
+<th>Fiche descriptive 05</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Cas d’utilisation :</td>
+<td>Choisir le mode de traitement</td>
+</tr>
+<tr>
+<td>Acteur principal :</td>
+<td>Utilisateur</td>
+</tr>
+<tr>
+<td>Acteur secondaire :</td>
+<td>Aucun</td>
+</tr>
+<tr>
+<td>Préconditions :</td>
+<td>données Chargées</td>
+</tr>
+<tr>
+<td>Garantie en cas de succès :</td>
+<td>Jeu de données taité</td>
+</tr>
+<tr>
+<td>Garantie minimale :</td>
+<td>Retour à l’état initial</td>
+</tr>
+</tbody>
+</table>
+<h3 id="scénario-nominal-fiche-05">Scénario Nominal Fiche 05</h3>
+<pre><code class="language-text"><div>
+    1) L’utilisateur sélectionne la fonctionnalité “Choisir le mode de traitements des données”
+    2) Le système propose un choix entre différents mode de traitements
+    3) L’utilisateur choisi et valide le mode de traitement des données est changé
+    4) Les données vont être traitées de la manière choisie
 
 </div></code></pre>
 
